manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metatron
  labels:
    app: metatron
spec:
  type: ClusterIP
  selector:
    app: metatron
  ports:
    - name: http
      port: 80
      targetPort: 80
